--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,1 +1,5 @@
-<p>task-list works!</p>
+<div class="task-list">
+  <div *ngFor="let task of tasks">
+    <p>{{ task.date | date:'shortDate' }}: {{ task.task }}</p>
+  </div>
+</div>
