--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,5 +1,6 @@
 <div class="task-list">
-  <div *ngFor="let task of tasks">
+  <div *ngFor="let task of tasks; let i = index">
     <p>{{ task.date | date:'shortDate' }}: {{ task.task }}</p>
+    <button (click)="removeTask(i)">Usuń</button>
   </div>
 </div>
