--- a/src/app/task-form/task-form.component.html
+++ b/src/app/task-form/task-form.component.html
@@ -1,6 +1,6 @@
-<div class="modal">
-  <div class="modal-content">
-    <h2>Add Task</h2>
+<div class="dialog">
+  <div class="dialog-content">
+    <h2>Task</h2>
     <form (submit)="submitForm($event)">
       <div>
         <label>Add Task</label>
