--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -7,9 +7,10 @@
 .calendar {
   background-color: #717171;
   border: 1px solid #ddd;
-  width: 1400px;
+  width: 1100px;
   color: aliceblue;
   font-weight: bold;
+  border-radius: 8px;
 }
 
 .calendar-header {
@@ -38,7 +39,7 @@
 }
 
 .calendar-table-cell {
-  padding: 60px;
+  padding: 50px;
   border-bottom: 1px solid #c3c3c3;
   border-right: 1px solid #c3c3c3;
   font-size: 14px;
