--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -14,10 +14,26 @@
 }
 
 .calendar-header {
+  display: flex;
+  justify-content: space-between;
   text-align: center;
   padding: 16px;
   font-size: 18px;
 }
+
+.previous-btn, .next-btn{
+  background-color: #4397cd;
+  border-radius: 4px;
+  border: none;
+  font-size: 14px;
+  padding: 12px;
+}
+
+.previous-btn:hover, .next-btn:hover {
+  background-color: #168acc;
+  cursor: pointer;
+}
+
 
 .calendar-weeks-table {
   display: grid;
