--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,7 +1,9 @@
 <div class="calendar-container">
   <div class="calendar">
     <div class="calendar-header">
+      <button class="previous-btn" (click)="previousMonth()">Previous</button>
       <div>{{ firstDayOfMonth.toFormat('MMMM yyyy') }}</div>
+      <button class="next-btn" (click)="nextMonth()">Next</button>
     </div>
 
     <div class="calendar-weeks-table">
