--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -1,82 +1,89 @@
-.calendar-container {
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-}
-
 .calendar {
-  background-color: #717171;
+  background-color: #5e5e5e;
   border: 1px solid #ddd;
-  width: 1100px;
-  color: aliceblue;
-  font-weight: bold;
   border-radius: 8px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .calendar-header {
   display: flex;
   justify-content: space-between;
-  text-align: center;
+  align-items: center;
+  background-color: #3f3f3f;
+  color: #fdfdfd;
   padding: 16px;
   font-size: 18px;
 }
 
-.previous-btn, .next-btn{
-  background-color: #1d4580;
-  border-radius: 4px;
+.calendar-header button {
+  background-color: #1f72d1;
+  color: #fdfdfd;
   border: none;
+  padding: 8px 16px;
+  border-radius: 4px;
   font-size: 14px;
-  font-weight: 700;
-  padding: 12px;
-  transition: all 0.3s ease-in-out;
-}
-
-.previous-btn:hover, .next-btn:hover {
-  transform: scale(0.9);
-  background-color: #168acc;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
-.calendar-weeks-table {
+.calendar-header button:hover {
+  background-color: #005cbf;
+}
+
+.calendar-body {
+  padding: 10px;
+}
+
+.days-of-week {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  background-color: #676767;
   text-align: center;
-  font-size: 14px;
-}
-
-.calendar-weeks-table-cell {
+  font-weight: bold;
+  background-color: #8e8e8e;
   padding: 8px;
-  border-bottom: 1px solid #ddd;
 }
 
-.calendar-table {
+#weeks {
+  padding: 4px;
+}
+
+.days-of-month {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  gap: 4px;
+  padding: 8px;
+}
+
+#days {
   text-align: center;
-}
-
-.calendar-table-cell {
-  padding: 50px;
-  border-bottom: 1px solid #c3c3c3;
-  border-right: 1px solid #c3c3c3;
-  font-size: 14px;
-}
-
-.calendar-table-cell:hover {
-  background-color: #7c7c7c;
+  padding: 30px;
+  background-color: #8e8e8e;
+  border-radius: 4px;
   cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
 }
-.calendar-table-cell.other-month {
-  background-color: #939393;
+
+#days:hover {
+  background-color: #b8b8b8;
 }
-.previous-btn{
-  border-bottom-left-radius: 100%;
-  border-top-left-radius:  100%;
-  width: 80px;
+
+#days.selected {
+  background-color: #1f72d1;
+  color: white;
 }
-.next-btn{
-  border-bottom-right-radius: 50%;
-  border-top-right-radius:  50%;
-  width: 80px;
+#days.other-month{
+  background-color: #bfbfbf;
 }
+
+.task-list {
+  margin-top: 16px;
+  padding: 16px;
+  background-color: #f9f9f9;
+  border-top: 1px solid #ddd;
+  border-radius: 0 0 8px 8px;
+}
+
