--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,24 +1,29 @@
-<div class="calendar-container">
-  <div class="calendar">
-    <div class="calendar-header">
-      <button class="previous-btn" (click)="previousMonth()">Previous</button>
-      <div>{{ firstDayOfMonth.toFormat('MMMM yyyy') }}</div>
-      <button class="next-btn" (click)="nextMonth()">Next</button>
-    </div>
+<div class="calendar">
+  <div class="calendar-header">
+    <button (click)="previousMonth()">Previous</button>
+    <span>{{ firstDayOfMonth.toFormat('MMMM yyyy') }}</span>
+    <button (click)="nextMonth()">Next</button>
+  </div>
 
-    <div class="calendar-weeks-table">
-      <div class="calendar-weeks-table-cell" *ngFor="let day of weekDays">
-        {{ day }}
-      </div>
+  <div class="calendar-body">
+    <div class="days-of-week">
+      <div id="weeks" *ngFor="let day of weekDays">{{ day }}</div>
     </div>
-
-    <div class="calendar-table">
-      <div class="calendar-table-cell" (click)="openDialog(day)" *ngFor="let day of daysOfMonth" [ngClass]="{'other-month': !isCurrentMonth(day)}">
+    <div class="days-of-month">
+      <div id="days"
+           *ngFor="let day of daysOfMonth"
+           [class.selected]="selectedDate?.hasSame(day, 'day')"
+           (click)="selectDay(day)"
+            [ngClass]="{'other-month': !currentMonth(day)}">
         {{ day.day }}
       </div>
     </div>
   </div>
-  <app-task-list [tasks]="tasks"></app-task-list>
+
+  <!-- Task list -->
+  <div class="task-list">
+    <app-task-list [tasks]="tasks" [selectedDate]="selectedDate"
+                   (taskAdded)="addTaskToSelectedDay($event)">
+    </app-task-list>
+  </div>
 </div>
-
-
