--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,9 +1,12 @@
+<div class="task-list-container">
+  <h3>Zadania na {{ selectedDate?.toFormat('dd MMMM yyyy') }}</h3>
 
-<div class="task-list">
-  <h2>Lista zadań do zrobienia</h2>
-  <div *ngFor="let task of tasks; let i = index">
-    <p>{{ task.date | date:'shortDate' }}: {{ task.task }}</p>
-    <button (click)="removeTask(i)">Usuń</button>
-    <img err src="">
-  </div>
+  <ul>
+    <li *ngFor="let task of filteredTasks; let i = index">
+      {{ task.task }}
+      <button id="delete-btn" (click)="removeTask(i)">Delete</button>
+    </li>
+  </ul>
+
+  <button id="add-btn" (click)="openDialog()">Add task</button>
 </div>
