--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,5 +1,5 @@
 <div class="task-list-container">
-  <h3>Zadania na {{ selectedDate?.toFormat('dd MMMM yyyy') }}</h3>
+  <h3>Tasks for {{ selectedDate?.toFormat('dd MMMM yyyy') }}</h3>
 
   <div class="task-controls">
     <button (click)="sortTasks(true)">Sort by First Letter (Asc)</button>
