--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -81,12 +81,21 @@
 #days.today{
   background-color: #ea7d2d;
 }
-
 .task-list {
   margin-top: 16px;
   padding: 16px;
   background-color: #f9f9f9;
   border-top: 1px solid #ddd;
   border-radius: 0 0 8px 8px;
+}
+#tasks-day{
+  display: flex;
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background-color: #56e310;
+  border-radius: 50%;
+  margin-top: 15px;
+
 }
 
