--- a/src/app/task-form/task-form.component.html
+++ b/src/app/task-form/task-form.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="taskForm" (ngSubmit)="submitForm()">
       <div>
         <label>Add Task</label>
-        <input type="text" formControlName="task" />
+        <input type="text" formControlName="task" appForbiddenWordValidator="forbidden"/>
         <div *ngIf="taskForm.get('task')?.invalid && taskForm.get('task')?.invalid">
           <div class ="validation" *ngIf="taskForm.get('task')?.hasError('required')">
             Task required!
@@ -14,6 +14,9 @@
           </div>
           <div class="validation" *ngIf="taskForm.get('task')?.hasError('maxlength')">
             Task max length 40 letters!
+          </div>
+          <div class="validation" *ngIf="taskForm.get('task')?.hasError('forbiddenWord')">
+            Task cannot contain forbidden word!
           </div>
         </div>
       </div>
