--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -71,7 +71,7 @@
   background-color: #b8b8b8;
 }
 
-#days.selected {
+#days.selected, #days.other-month.selected {
   background-color: #1f72d1;
   color: white;
 }
@@ -91,11 +91,11 @@
 #tasks-day{
   display: flex;
   position: absolute;
+  align-items: center;
   width: 8px;
   height: 8px;
   background-color: #56e310;
   border-radius: 50%;
   margin-top: 15px;
-
 }
 
